fix(@vtmn/css): fix min-width and wrap behaviour to correctly display the arrow

--- a/packages/sources/css/src/components/forms/select/src/index.css
+++ b/packages/sources/css/src/components/forms/select/src/index.css
@@ -31,6 +31,7 @@
   box-shadow: inset 0 0 0 rem(1px) var(--vtmn-semantic-color_border-inactive);
   border-radius: var(--vtmn-radius_100);
   block-size: rem(48px);
+  min-inline-size: 100%;
   inline-size: min-content;
   background-color: var(--vtmn-semantic-color_background-primary);
   cursor: pointer;
@@ -57,6 +58,7 @@
   line-height: var(--vtmn-typo_text-3-line-height);
   margin-block-start: rem(4px);
   display: inline-block;
+  white-space: normal;
 }
 
 .vtmn-select_container .vtmn-select_error-text::before {
